- worked on fixing up new font due to line height issues - worked on mobile side to improve look on mobile devices

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -33,7 +33,7 @@ h1{
 }
 
 h2{
-    @include sans-serif($fs: 2rem, $lh: 0.1);
+    @include sans-serif($fs: 2rem, $lh: 1.8rem);
 
     @include mq($width: 60em){
         font-size: 2rem;
@@ -53,7 +53,9 @@ p{
 }
 
 .container-all{
+    padding: 1em 1em;
     @include mq($width: 70em){
+        padding: 0 0;
         grid-column: content-start/ content-end;
     }
 }
